update multiple choice quiz UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quizz Partner</string>
+    <string name="app_name">Cerdas Cermat Alkitab</string>
     <string name="label_button_login">LOGIN</string>
     <string name="label_button_register">DAFTAR</string>
     <string name="label_button_login_as_guest">MASUK SEBAGAI TAMU</string>
